// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`inline markup end-to-end (xterm-256color) > renders hovered rows to stable bytes 1`] = `
"plain prose                ESC[48;5;233mjust some words
bold                       ESC[48;5;233ma ESC[1mboldESC[0mESC[48;5;233mESC[39m bESC[0m
italic-star                ESC[48;5;233ma ESC[4mitalESC[0mESC[48;5;233mESC[39m bESC[0m
italic-underscore          ESC[48;5;233ma ESC[4mitalESC[0mESC[48;5;233mESC[39m bESC[0m
inline code                ESC[48;5;233mcall ESC[36mfoo()ESC[0mESC[48;5;233mESC[39m nowESC[0m
link                       ESC[48;5;233msee ESC[96mESC[4mthe docsESC[0mESC[48;5;233mESC[39m nowESC[0m
bold inside code           ESC[48;5;233mESC[36ma **b** cESC[0mESC[48;5;233mESC[39mESC[0m
code inside bold           ESC[48;5;233mESC[1ma ESC[36mbESC[0mESC[48;5;233mESC[39mESC[1m cESC[0mESC[48;5;233mESC[39mESC[0m
literal caret in prose     ESC[48;5;233mpress ^C to quit
literal caret in code      ESC[48;5;233mESC[36ma ^ bESC[0mESC[48;5;233mESC[39mESC[0m
backslash-escaped star     ESC[48;5;233ma *not italic* b
heading-1 with code        ESC[48;5;233mpre ESC[36mcli/ESC[0mESC[48;5;233mESC[39m postESC[0m
heading-2 with bold        ESC[48;5;233mESC[1mboldESC[0mESC[48;5;233mESC[39m midESC[0m
heading-3 with code        ESC[48;5;233mESC[36mxESC[0mESC[48;5;233mESC[39m yESC[0m
heading-1 with link        ESC[48;5;233msee ESC[96mESC[4mdocsESC[0mESC[48;5;233mESC[39m xESC[0m
bullet list with spans     ESC[48;5;233m• ESC[1maESC[0mESC[48;5;233mESC[39m and ESC[36mbESC[0mESC[48;5;233mESC[39mESC[0m
bullet list with spans     ESC[48;5;233m• plain
ordered list with spans    ESC[48;5;233m1. ESC[1maESC[0mESC[48;5;233mESC[39m and ESC[36mbESC[0mESC[48;5;233mESC[39mESC[0m
ordered list with spans    ESC[48;5;233m2. plain
table with spans           ESC[1mh ESC[1mbESC[0mESC[1m │ h2ESC[0mESC[22m
table with spans           ESC[48;5;236mESC[2m────┼───ESC[22mESC[49m
table with spans           ESC[96mcESC[0m   │ ESC[4miESC[0m ESC[0m
fenced code                ESC[48;5;233mconst a = 1;
fenced code no lang        ESC[48;5;233mraw ^ text
unbalanced bold            ESC[48;5;233ma **b c
adjacent spans             ESC[48;5;233mESC[1maESC[0mESC[48;5;233mESC[39mESC[36mbESC[0mESC[48;5;233mESC[39mESC[4mcESC[0mESC[48;5;233mESC[39mESC[0m
multiline prose with spans ESC[48;5;233mline ESC[1moneESC[0mESC[48;5;233mESC[39mESC[0m
multiline prose with spans ESC[48;5;233mline ESC[36mtwoESC[0mESC[48;5;233mESC[39mESC[0m"
`;

exports[`inline markup end-to-end (xterm-256color) > renders the agent-markdown corpus to stable bytes 1`] = `
"### plain prose
  agent          just some words

### bold
  agent          a ESC[1mboldESC[0m bESC[0m

### italic-star
  agent          a ESC[4mitalESC[0m bESC[0m

### italic-underscore
  agent          a ESC[4mitalESC[0m bESC[0m

### inline code
  agent          call ESC[96mfoo()ESC[0m nowESC[0m

### link
  agent          see ESC[96mESC[4mthe docsESC[0m nowESC[0m

### bold inside code
  agent          ESC[96ma **b** cESC[0mESC[0m

### code inside bold
  agent          ESC[1ma ESC[96mbESC[0mESC[1m cESC[0mESC[0m

### literal caret in prose
  agent          press ^C to quit

### literal caret in code
  agent          ESC[96ma ^ bESC[0mESC[0m

### backslash-escaped star
  agent          a *not italic* b

### heading-1 with code
  heading-1      ESC[1mESC[93mpre ESC[96mcli/ESC[0mESC[1mESC[93m postESC[0mESC[39mESC[22m

### heading-2 with bold
  heading-2      ESC[1mESC[96mESC[1mboldESC[0mESC[1mESC[96m midESC[0mESC[39mESC[22m

### heading-3 with code
  heading-3      ESC[1mESC[96mxESC[0mESC[1m yESC[0mESC[22m

### heading-1 with link
  heading-1      ESC[1mESC[93msee ESC[96mESC[4mdocsESC[0mESC[1mESC[93m xESC[0mESC[39mESC[22m

### bullet list with spans
  agent          • ESC[1maESC[0m and ESC[96mbESC[0mESC[0m
  agent          • plain

### ordered list with spans
  agent          1. ESC[1maESC[0m and ESC[96mbESC[0mESC[0m
  agent          2. plain

### table with spans
  heading-3      ESC[1mh ESC[1mbESC[0mESC[1m │ h2ESC[0mESC[22m
  dim            ESC[2m────┼───ESC[22m
  agent          ESC[96mcESC[0m   │ ESC[4miESC[0m ESC[0m

### fenced code
  code           ESC[48;5;234mESC[37mESC[94mconstESC[37m a = ESC[92m1ESC[37m;ESC[39mESC[49m

### fenced code no lang
  code           ESC[48;5;234mESC[37mraw ^ textESC[39mESC[49m

### unbalanced bold
  agent          a **b c

### adjacent spans
  agent          ESC[1maESC[0mESC[96mbESC[0mESC[4mcESC[0mESC[0m

### multiline prose with spans
  agent          line ESC[1moneESC[0mESC[0m
  agent          line ESC[96mtwoESC[0mESC[0m"
`;

exports[`inline markup end-to-end (xterm-256color) > renders the thought-markdown corpus to stable bytes 1`] = `
"### plain prose
  thought      ESC[90m  ESC[39mESC[90mjust some wordsESC[39m

### bold
  thought      ESC[90m  ESC[39mESC[90ma ESC[1mboldESC[0mESC[90m bESC[0mESC[39m

### italic-star
  thought      ESC[90m  ESC[39mESC[90ma ESC[4mitalESC[0mESC[90m bESC[0mESC[39m

### italic-underscore
  thought      ESC[90m  ESC[39mESC[90ma ESC[4mitalESC[0mESC[90m bESC[0mESC[39m

### inline code
  thought      ESC[90m  ESC[39mESC[90mcall ESC[36mfoo()ESC[0mESC[90m nowESC[0mESC[39m

### link
  thought      ESC[90m  ESC[39mESC[90msee ESC[96mESC[4mthe docsESC[0mESC[90m nowESC[0mESC[39m

### bold inside code
  thought      ESC[90m  ESC[39mESC[90mESC[36ma **b** cESC[0mESC[90mESC[0mESC[39m

### code inside bold
  thought      ESC[90m  ESC[39mESC[90mESC[1ma ESC[36mbESC[0mESC[90mESC[1m cESC[0mESC[90mESC[0mESC[39m

### literal caret in prose
  thought      ESC[90m  ESC[39mESC[90mpress ^C to quitESC[39m

### literal caret in code
  thought      ESC[90m  ESC[39mESC[90mESC[36ma ^ bESC[0mESC[90mESC[0mESC[39m

### backslash-escaped star
  thought      ESC[90m  ESC[39mESC[90ma *not italic* bESC[39m

### heading-1 with code
  thought      ESC[90m  ESC[39mESC[90mpre ESC[36mcli/ESC[0mESC[90m postESC[0mESC[39m

### heading-2 with bold
  thought      ESC[90m  ESC[39mESC[90mESC[1mboldESC[0mESC[90m midESC[0mESC[39m

### heading-3 with code
  thought      ESC[90m  ESC[39mESC[90mESC[36mxESC[0mESC[90m yESC[0mESC[39m

### heading-1 with link
  thought      ESC[90m  ESC[39mESC[90msee ESC[96mESC[4mdocsESC[0mESC[90m xESC[0mESC[39m

### bullet list with spans
  thought      ESC[90m  ESC[39mESC[90m• ESC[1maESC[0mESC[90m and ESC[36mbESC[0mESC[90mESC[0mESC[39m
  thought      ESC[90m  ESC[39mESC[90m• plainESC[39m

### ordered list with spans
  thought      ESC[90m  ESC[39mESC[90m1. ESC[1maESC[0mESC[90m and ESC[36mbESC[0mESC[90mESC[0mESC[39m
  thought      ESC[90m  ESC[39mESC[90m2. plainESC[39m

### table with spans
  heading-3    ESC[90m  ESC[39mESC[1mh ESC[1mbESC[0mESC[1m │ h2ESC[0mESC[22m
  dim          ESC[90m  ESC[39mESC[2m────┼───ESC[22m
  agent        ESC[90m  ESC[39mESC[96mcESC[0m   │ ESC[4miESC[0m ESC[0m

### fenced code
  thought      ESC[90m  ESC[39mESC[90mconst a = 1;ESC[39m

### fenced code no lang
  thought      ESC[90m  ESC[39mESC[90mraw ^ textESC[39m

### unbalanced bold
  thought      ESC[90m  ESC[39mESC[90ma **b cESC[39m

### adjacent spans
  thought      ESC[90m  ESC[39mESC[90mESC[1maESC[0mESC[90mESC[36mbESC[0mESC[90mESC[4mcESC[0mESC[90mESC[0mESC[39m

### multiline prose with spans
  thought      ESC[90m  ESC[39mESC[90mline ESC[1moneESC[0mESC[90mESC[0mESC[39m
  thought      ESC[90m  ESC[39mESC[90mline ESC[36mtwoESC[0mESC[90mESC[0mESC[39m"
`;

exports[`inline markup end-to-end (xterm-truecolor) > renders hovered rows to stable bytes 1`] = `
"plain prose                ESC[48;2;25;25;25mjust some words
bold                       ESC[48;2;25;25;25ma ESC[1mboldESC[0mESC[48;2;25;25;25mESC[39m bESC[0m
italic-star                ESC[48;2;25;25;25ma ESC[4mitalESC[0mESC[48;2;25;25;25mESC[39m bESC[0m
italic-underscore          ESC[48;2;25;25;25ma ESC[4mitalESC[0mESC[48;2;25;25;25mESC[39m bESC[0m
inline code                ESC[48;2;25;25;25mcall ESC[36mfoo()ESC[0mESC[48;2;25;25;25mESC[39m nowESC[0m
link                       ESC[48;2;25;25;25msee ESC[96mESC[4mthe docsESC[0mESC[48;2;25;25;25mESC[39m nowESC[0m
bold inside code           ESC[48;2;25;25;25mESC[36ma **b** cESC[0mESC[48;2;25;25;25mESC[39mESC[0m
code inside bold           ESC[48;2;25;25;25mESC[1ma ESC[36mbESC[0mESC[48;2;25;25;25mESC[39mESC[1m cESC[0mESC[48;2;25;25;25mESC[39mESC[0m
literal caret in prose     ESC[48;2;25;25;25mpress ^C to quit
literal caret in code      ESC[48;2;25;25;25mESC[36ma ^ bESC[0mESC[48;2;25;25;25mESC[39mESC[0m
backslash-escaped star     ESC[48;2;25;25;25ma *not italic* b
heading-1 with code        ESC[48;2;25;25;25mpre ESC[36mcli/ESC[0mESC[48;2;25;25;25mESC[39m postESC[0m
heading-2 with bold        ESC[48;2;25;25;25mESC[1mboldESC[0mESC[48;2;25;25;25mESC[39m midESC[0m
heading-3 with code        ESC[48;2;25;25;25mESC[36mxESC[0mESC[48;2;25;25;25mESC[39m yESC[0m
heading-1 with link        ESC[48;2;25;25;25msee ESC[96mESC[4mdocsESC[0mESC[48;2;25;25;25mESC[39m xESC[0m
bullet list with spans     ESC[48;2;25;25;25m• ESC[1maESC[0mESC[48;2;25;25;25mESC[39m and ESC[36mbESC[0mESC[48;2;25;25;25mESC[39mESC[0m
bullet list with spans     ESC[48;2;25;25;25m• plain
ordered list with spans    ESC[48;2;25;25;25m1. ESC[1maESC[0mESC[48;2;25;25;25mESC[39m and ESC[36mbESC[0mESC[48;2;25;25;25mESC[39mESC[0m
ordered list with spans    ESC[48;2;25;25;25m2. plain
table with spans           ESC[1mh ESC[1mbESC[0mESC[1m │ h2ESC[0mESC[22m
table with spans           ESC[48;5;236mESC[2m────┼───ESC[22mESC[49m
table with spans           ESC[96mcESC[0m   │ ESC[4miESC[0m ESC[0m
fenced code                ESC[48;2;25;25;25mconst a = 1;
fenced code no lang        ESC[48;2;25;25;25mraw ^ text
unbalanced bold            ESC[48;2;25;25;25ma **b c
adjacent spans             ESC[48;2;25;25;25mESC[1maESC[0mESC[48;2;25;25;25mESC[39mESC[36mbESC[0mESC[48;2;25;25;25mESC[39mESC[4mcESC[0mESC[48;2;25;25;25mESC[39mESC[0m
multiline prose with spans ESC[48;2;25;25;25mline ESC[1moneESC[0mESC[48;2;25;25;25mESC[39mESC[0m
multiline prose with spans ESC[48;2;25;25;25mline ESC[36mtwoESC[0mESC[48;2;25;25;25mESC[39mESC[0m"
`;

exports[`inline markup end-to-end (xterm-truecolor) > renders the agent-markdown corpus to stable bytes 1`] = `
"### plain prose
  agent          just some words

### bold
  agent          a ESC[1mboldESC[0m bESC[0m

### italic-star
  agent          a ESC[4mitalESC[0m bESC[0m

### italic-underscore
  agent          a ESC[4mitalESC[0m bESC[0m

### inline code
  agent          call ESC[96mfoo()ESC[0m nowESC[0m

### link
  agent          see ESC[96mESC[4mthe docsESC[0m nowESC[0m

### bold inside code
  agent          ESC[96ma **b** cESC[0mESC[0m

### code inside bold
  agent          ESC[1ma ESC[96mbESC[0mESC[1m cESC[0mESC[0m

### literal caret in prose
  agent          press ^C to quit

### literal caret in code
  agent          ESC[96ma ^ bESC[0mESC[0m

### backslash-escaped star
  agent          a *not italic* b

### heading-1 with code
  heading-1      ESC[1mESC[93mpre ESC[96mcli/ESC[0mESC[1mESC[93m postESC[0mESC[39mESC[22m

### heading-2 with bold
  heading-2      ESC[1mESC[96mESC[1mboldESC[0mESC[1mESC[96m midESC[0mESC[39mESC[22m

### heading-3 with code
  heading-3      ESC[1mESC[96mxESC[0mESC[1m yESC[0mESC[22m

### heading-1 with link
  heading-1      ESC[1mESC[93msee ESC[96mESC[4mdocsESC[0mESC[1mESC[93m xESC[0mESC[39mESC[22m

### bullet list with spans
  agent          • ESC[1maESC[0m and ESC[96mbESC[0mESC[0m
  agent          • plain

### ordered list with spans
  agent          1. ESC[1maESC[0m and ESC[96mbESC[0mESC[0m
  agent          2. plain

### table with spans
  heading-3      ESC[1mh ESC[1mbESC[0mESC[1m │ h2ESC[0mESC[22m
  dim            ESC[2m────┼───ESC[22m
  agent          ESC[96mcESC[0m   │ ESC[4miESC[0m ESC[0m

### fenced code
  code           ESC[48;2;28;28;28mESC[37mESC[94mconstESC[37m a = ESC[92m1ESC[37m;ESC[39mESC[49m

### fenced code no lang
  code           ESC[48;2;28;28;28mESC[37mraw ^ textESC[39mESC[49m

### unbalanced bold
  agent          a **b c

### adjacent spans
  agent          ESC[1maESC[0mESC[96mbESC[0mESC[4mcESC[0mESC[0m

### multiline prose with spans
  agent          line ESC[1moneESC[0mESC[0m
  agent          line ESC[96mtwoESC[0mESC[0m"
`;

exports[`inline markup end-to-end (xterm-truecolor) > renders the thought-markdown corpus to stable bytes 1`] = `
"### plain prose
  thought      ESC[90m  ESC[39mESC[90mjust some wordsESC[39m

### bold
  thought      ESC[90m  ESC[39mESC[90ma ESC[1mboldESC[0mESC[90m bESC[0mESC[39m

### italic-star
  thought      ESC[90m  ESC[39mESC[90ma ESC[4mitalESC[0mESC[90m bESC[0mESC[39m

### italic-underscore
  thought      ESC[90m  ESC[39mESC[90ma ESC[4mitalESC[0mESC[90m bESC[0mESC[39m

### inline code
  thought      ESC[90m  ESC[39mESC[90mcall ESC[36mfoo()ESC[0mESC[90m nowESC[0mESC[39m

### link
  thought      ESC[90m  ESC[39mESC[90msee ESC[96mESC[4mthe docsESC[0mESC[90m nowESC[0mESC[39m

### bold inside code
  thought      ESC[90m  ESC[39mESC[90mESC[36ma **b** cESC[0mESC[90mESC[0mESC[39m

### code inside bold
  thought      ESC[90m  ESC[39mESC[90mESC[1ma ESC[36mbESC[0mESC[90mESC[1m cESC[0mESC[90mESC[0mESC[39m

### literal caret in prose
  thought      ESC[90m  ESC[39mESC[90mpress ^C to quitESC[39m

### literal caret in code
  thought      ESC[90m  ESC[39mESC[90mESC[36ma ^ bESC[0mESC[90mESC[0mESC[39m

### backslash-escaped star
  thought      ESC[90m  ESC[39mESC[90ma *not italic* bESC[39m

### heading-1 with code
  thought      ESC[90m  ESC[39mESC[90mpre ESC[36mcli/ESC[0mESC[90m postESC[0mESC[39m

### heading-2 with bold
  thought      ESC[90m  ESC[39mESC[90mESC[1mboldESC[0mESC[90m midESC[0mESC[39m

### heading-3 with code
  thought      ESC[90m  ESC[39mESC[90mESC[36mxESC[0mESC[90m yESC[0mESC[39m

### heading-1 with link
  thought      ESC[90m  ESC[39mESC[90msee ESC[96mESC[4mdocsESC[0mESC[90m xESC[0mESC[39m

### bullet list with spans
  thought      ESC[90m  ESC[39mESC[90m• ESC[1maESC[0mESC[90m and ESC[36mbESC[0mESC[90mESC[0mESC[39m
  thought      ESC[90m  ESC[39mESC[90m• plainESC[39m

### ordered list with spans
  thought      ESC[90m  ESC[39mESC[90m1. ESC[1maESC[0mESC[90m and ESC[36mbESC[0mESC[90mESC[0mESC[39m
  thought      ESC[90m  ESC[39mESC[90m2. plainESC[39m

### table with spans
  heading-3    ESC[90m  ESC[39mESC[1mh ESC[1mbESC[0mESC[1m │ h2ESC[0mESC[22m
  dim          ESC[90m  ESC[39mESC[2m────┼───ESC[22m
  agent        ESC[90m  ESC[39mESC[96mcESC[0m   │ ESC[4miESC[0m ESC[0m

### fenced code
  thought      ESC[90m  ESC[39mESC[90mconst a = 1;ESC[39m

### fenced code no lang
  thought      ESC[90m  ESC[39mESC[90mraw ^ textESC[39m

### unbalanced bold
  thought      ESC[90m  ESC[39mESC[90ma **b cESC[39m

### adjacent spans
  thought      ESC[90m  ESC[39mESC[90mESC[1maESC[0mESC[90mESC[36mbESC[0mESC[90mESC[4mcESC[0mESC[90mESC[0mESC[39m

### multiline prose with spans
  thought      ESC[90m  ESC[39mESC[90mline ESC[1moneESC[0mESC[90mESC[0mESC[39m
  thought      ESC[90m  ESC[39mESC[90mline ESC[36mtwoESC[0mESC[90mESC[0mESC[39m"
`;
